--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,8 @@
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.1.47/jquery.form-validator.min.js"></script>
 
     <!--
         Stylesheets and Preprocessors
@@ -27,6 +29,7 @@
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
+
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/bootstrap.css">
@@ -112,8 +115,12 @@
             </div>
         </div>
     </footer>
+
+        <!--SCRIPTS-->
+        <script src="/js/dependencies/sails.io.js"></script>
+        <script src="/js/dependencies/jquery.form-validator.min.js"></script>
+        <script src="/js/dependencies/jquery.min.js"></script>
+        <!--SCRIPTS END-->
+
   </body>
-  <!-- scripts -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </html>
