--- a/views/app/editbuild.ejs
+++ b/views/app/editbuild.ejs
@@ -16,20 +16,20 @@
 <div class="row">
 <div class="form-group  col-sm-5">
         	<label  class="control-label" for="appBuild">App Build (.ipa file)</label>
-        	<input type="file" class="form-control" id="appbuild" placeholder="Choose File" name="appbuild" accept=".ipa">
+        	<input type="file" class="form-control" id="appbuild" placeholder="Choose File" name="url" accept=".ipa">
     	</div>
-      <input type="hidden" name="buildid" value="<%= build.id%>" >
+      <input type="hidden" name="id" value="<%= build.id%>" >
  </div>
 <div class="row">
     	<div class="form-group  col-sm-5">
         	<label  class="control-label" for="versionNo">Version No.</label>
-        	<input type="text" class="form-control" id="versionNo" name="version" value="<%= build.version%>">
+        	<input type="text" class="form-control" id="version" name="version" value="<%= build.version%>">
     	</div>
 </div>
 <div class="row">
     	<div class="form-group  col-sm-5">
         	<label class="control-label" for="appDetail">Version Notes</label>
-        	<textarea class="form-control" rows="10" value = "random text" id="appDetail" name="appdetail"><%= build.detail%></textarea>
+        	<textarea class="form-control" rows="10" value = "random text" id="detail" name="detail"><%= build.detail%></textarea>
     	</div>
 </div>
 <div class="row">
